--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /plugins/**/**/*.xml
 
 /release
+
+# Internal language symlinks
+/component/language/*/en-GB
+/modules/*/*/language/en-GB
+/plugins/*/*/language/en-GB
+/translations
