Increase minimum Joomla and PHP version requirement

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@
 # Editor-based Rest Client
 .idea/httpRequests
 
+## Composer
+
+/vendor
+
 ## Akeeba Stuff
 
 # Build property overrides (unused)
