--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
 	"require": {
 		"php": "^7.1",
 		"ext-json": "*",
-		"lcobucci/jwt": "^3.3"
+		"lcobucci/jwt": "^3.3",
+		"codercat/jwk-to-pem": "<= 1.0.0",
+		"phpseclib/bcmath_compat": "^1.0.0"
 	},
 	"suggest": {
 	}
