--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Package XML file (copy)
+/pkg_*.xml
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
