--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		}
 	},
 	"require": {
-		"php": ">=7.4 <8.1",
+		"php": ">=7.4 <=8.2",
 		"ext-json": "*",
 		"lcobucci/jwt": "^4.0",
 		"codercat/jwk-to-pem": "<= 1.0.0",
